--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -10,7 +10,20 @@
 
 @media screen and (min-width: 768px) {
   .cover__subtitle {
+    padding: 0 204px 115px 204px;
     font-size: 18px;
     line-height: 22px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__subtitle {
+    padding: 0 332px 195px 332px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__subtitle {
+    padding: 0 412px 245px 412px;
   }
 }
