--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -12,6 +12,18 @@
   .cover__title {
     font-size: 72px;
     line-height: 76px;
-    padding-bottom: 32px;
+    padding: 115px 104px 32px 104px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover__title {
+    padding: 195px 232px 32px 232px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cover__title {
+    padding: 245px 312px 32px 312px;
   }
 }
