--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,6 +1,9 @@
 .cover__background {
-  display: block;
+  position: absolute;
+  z-index: -1;
   max-width: 100%;
   object-fit: contain;
+  object-position: center;
   opacity: 0.7;
+  transition: opacity 0.5s;
 }
