--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
   text-align: center;
-  margin: 16px 16px 40px 16px;
+  margin: 16px auto 40px auto;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -11,7 +11,7 @@
   .lead__subtitle {
     font-size: 30px;
     line-height: 36px;
-    margin: 32px 0 56px 0;
+    margin: 32px auto 56px auto;
   }
 }
 
