--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,10 @@
 .page {
+  font-family: "Inter", "Arial", sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
   min-width: 320px;
   max-width: 1280px;
-  background-color: #2A2C2F;
-  color: #FFFFFF;
+  background-color: #2a2c2f;
+  color: #ffffff;
+  margin: auto;
 }
