--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,10 +1,17 @@
 .places__paragraph {
   font-weight: 400;
   font-size: 16px;
-  line-height: 163%;
+  line-height: 26.08px;
   margin: 25px 0 0 0;
 }
 
 .places__paragraph:first-child {
   margin-top: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .places__paragraph {
+    font-size: 18px;
+    line-height: 29.34px;
+  }
 }
