--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,10 +1,28 @@
 .cover__link {
   color: inherit;
   text-decoration: none;
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 200px;
+  background: center / cover no-repeat url("../../../images/cover-trains.jpg");
+  position: relative;
+  z-index: 0;
+}
+
+.cover__link::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2a2c2f;
+  opacity: 0.3;
+  z-index: 1;
+}
+
+.cover__link:hover::after {
+  opacity: 0.8;
 }
